# embedding_yakl

./: CMakeLists.txt  readme.md
cmake/: build_yakl.cmake  embedding_yakl_install.cmake  prevent_in_source_build.cmake
src/: CMakeLists.txt  mykernels.F90  mykernels.cu  test_yakl.F90
